[project]
name = "urdfpy"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lxml>=6.0.1",
    "networkx<3",
    "numpy<2",
    "pillow>=11.3.0",
    "pycollada>=0.9.2",
    "pyrender>=0.1.45",
    "six>=1.17.0",
    "trimesh>=4.8.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
docs = [
    "sphinx>=8.1.3",
    "sphinx-automodapi>=0.20.0",
    "sphinx-rtd-theme>=3.0.2"
]
